@@ -1,8 +1,9 @@
 package com.springboot.connectmate.services.impl;
 
 import com.springboot.connectmate.dtos.Metric.MetricDTO;
-import com.springboot.connectmate.dtos.Update.UpdateThresholdMetricDTO;
+import com.springboot.connectmate.dtos.ThresholdBreachInsight.ThresholdBreachInsightDetailDTO;
 import com.springboot.connectmate.enums.ConnectMetricCode;
+import com.springboot.connectmate.exceptions.ResourceNotFoundException;
 import com.springboot.connectmate.models.Metric;
 import com.springboot.connectmate.repositories.MetricRepository;
 import com.springboot.connectmate.services.MetricService;
@@ -12,7 +13,8 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
+
 
 @Service
 public class MetricServiceImpl implements MetricService {
@@ -36,43 +38,26 @@ public class MetricServiceImpl implements MetricService {
         List<Metric> metrics = metricRepository.findAll();
         return metrics.stream()
                 .map(metric -> mapper.map(metric, MetricDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Metric> getAllMetrics() {
-        return metricRepository.findAll();
+    public MetricDTO getConnectMateMetricByCode(ConnectMetricCode code) {
+        Metric metric = metricRepository.findById(code)
+                .orElseThrow(() -> new ResourceNotFoundException("Metric", "code", code.toString()));
+        return mapper.map(metricRepository.findById(code), MetricDTO.class);
     }
 
     @Override
-    public Metric updateThresholds(String code, UpdateThresholdMetricDTO updateThresholdMetricDTO) {
-        Optional<Metric> optionalMetric = metricRepository.findById(ConnectMetricCode.valueOf(code));
-        if (optionalMetric.isPresent()) {
-            Metric metric = optionalMetric.get();
-            metric.setMinimumThresholdValue(updateThresholdMetricDTO.getMinimumThresholdValue());
-            metric.setMaximumThresholdValue(updateThresholdMetricDTO.getMaximumThresholdValue());
-            metric.setTargetValue(updateThresholdMetricDTO.getTargetValue());
-            return metricRepository.save(metric);
-        } else {
-            throw new RuntimeException("Metric not found with code: " + code);
-        }
-    }
+    public MetricDTO setThresholdsAndTarget(ConnectMetricCode code, Double minThreshold, Double maxThreshold, Double targetValue) {
+        Metric metric = metricRepository.findById(code)
+                .orElseThrow(() -> new ResourceNotFoundException("Metric", "code", code.toString()));
 
-    @Override
-    public List<String> getHistoricalMetricsV2(String instanceArn, String queueId) {
-        // Implement logic to fetch historical metrics
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<String> getHistoricalMetrics(String instanceId, String queueId) {
-        // Implement logic to fetch historical metrics
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<String> getCurrentMetrics(String instanceArn) {
-        // Implement logic to fetch current metrics
-        return Collections.emptyList();
+        // TODO: Set upper and lower bounds of metrics
+        metric.setMinimumThresholdValue(minThreshold);
+        metric.setMaximumThresholdValue(maxThreshold);
+        metric.setTargetValue(targetValue != null ? targetValue : code.getDefaultTargetValue());
+        metricRepository.save(metric);
+        return mapper.map(metric, MetricDTO.class);
     }
 }
